# DLFB

./: .clang-format  CMakeLists.txt  README.md  main.cpp
data/: mnist.sh
example/: distributed_mnist.cpp  mnist.cpp  test_avx.cpp  test_cuda.cpp  test_graph.cpp  test_net.cpp  test_tensor.cpp  test_threadpool.cpp
include/: avx.h  dl.h  graph.h  io.h  macro.h  node.h  optim.h  queue.h  random.h  socket.h  tensor.h  thread_pool.h  timer.h  utils.h
include/core/: add.h  graph.h  node.h  optim.h  tensor.h
include/cuda/: cuda_add.h  cuda_conv.h  cuda_mul.h  cudalib.h
include/dag/: graph.h  node.h  optim.h  tensor.h
include/dag/layer/: activation.h  batchnorm.h  conv.h  crossentropy.h  dropout.h  layer.h  linear.h  pooling.h  reshape.h  softmax.h
include/dag/operator/: activation.h  add.h  conv.h  crossentropy.h  dataprovider.h  dropout.h  mul.h  norm.h  pooling.h  reduce.h  reshape.h  softmax.h  sub.h
include/operator/: add.h  dataprovider.h  operator.h  parameter.h
include/utils/: io.h  random.h  thread_pool.h  utils.h
src/: add.cpp  cudalib.cu  graph.cpp  node.cpp  tensor.cpp  thread_pool.cpp
src/cuda_impl/: add.cu  conv.cu  mul.cu
src/operator/: add.cpp
src/utils/: random.cpp
test/: test_node.cpp  test_tensor.cpp
